[gd_scene load_steps=2 format=3 uid="uid://b3jii7klfxgrs"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_hrskk"]

[node name="Main" type="Node2D"]
script = ExtResource("1_hrskk")

[node name="Play" type="Button" parent="."]
offset_left = 476.0
offset_top = 228.0
offset_right = 676.0
offset_bottom = 303.0
text = "Play"

[node name="Options" type="Button" parent="."]
offset_left = 476.0
offset_top = 328.0
offset_right = 676.0
offset_bottom = 403.0
text = "Options"

[node name="Credits" type="Button" parent="."]
offset_left = 476.0
offset_top = 428.0
offset_right = 676.0
offset_bottom = 503.0
text = "Credits"

[node name="Exit" type="Button" parent="."]
offset_left = 476.0
offset_top = 528.0
offset_right = 676.0
offset_bottom = 603.0
text = "Exit
"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
